# agent-infra-spike

./: .coverage  .env.example  .gitignore  CURRENT_STATE.md  README.md  cli.py  cli_maf.py  example.py  haiku_example.py  pyproject.toml  test_output.txt  test_workspace_name_fix.py
.devcontainer/: devcontainer.json  post-create.sh
.github/: copilot-instructions.md
agent/: __init__.py  config.py  decision_engine.py  infrastructure_agent.py  intent_recognizer.py  terraform_executor.py  terraform_generator.py
agent_infra_spike.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
capabilities/: README.md  __init__.py  base.py
capabilities/databricks/: README.md  __init__.py  capability.py  decision_engine.py  intent_recognizer.py  terraform_executor.py  terraform_generator.py
capabilities/databricks/core/: __init__.py  config.py  decision_maker.py  intent_parser.py
capabilities/databricks/models/: __init__.py  schemas.py
capabilities/databricks/provisioning/: __init__.py
capabilities/databricks/provisioning/terraform/: __init__.py  executor.py  generator.py
capabilities/databricks/templates/: main.tf.j2  outputs.tf.j2  terraform.tfvars.j2  variables.tf.j2
docs/: ARCHITECTURE_DIAGRAM.md  ARCHITECTURE_EVOLUTION.md  COMPLETE_FLOW_DIAGRAM.md  DATABRICKS_REFACTORING_SUMMARY.md  MAF_RESEARCH_AND_IMPLEMENTATION_PLAN.md  MAF_TOOL_CALLING_FIX.md  PRD.md  SPIKE_COMPLETION_SUMMARY.md  STRUCTURE_VISUAL_GUIDE.md  VISUAL_STRUCTURE.md
docs/examples/: EXAMPLE_NEW_CAPABILITY.py
docs/implementation_status/: PHASE_0_RESULTS.md  PHASE_1.5_TOOL_REGISTRY.md  PHASE_1.6_CAPABILITY_REGISTRY.md  PHASE_1_RESULTS.md  PHASE_2_CAPABILITY_INTEGRATION.md  README.md
docs/terraform_blueprint_future_consideration_implementation/: 2025-11-10-BLUEPRINT_IMPLEMENTATION_PLAN.md  2025-11-10-BLUEPRINT_PATTERN_DESIGN.md  2025-11-10-IMPLEMENTATION_READY.md  2025-11-10-LLM_TEMPLATE_GENERATION_ARCHITECTURE.md
orchestrator/: __init__.py  capability_registry.py  models.py  orchestrator_agent.py  tool_manager.py  tools.py
templates/: main.tf.j2  provider.tf.j2
tests/: __init__.py  test_capability_integration.py  test_config.py  test_decision_engine.py  test_decision_maker.py  test_infrastructure_agent.py  test_intent_recognizer.py  test_maf_setup.py  test_models.py  test_orchestrator.py  test_terraform_executor.py  test_terraform_generator.py
